--- a/cognito-custom-email-sender/templates/WelcomeEmailEmployeeTemplate.html
+++ b/cognito-custom-email-sender/templates/WelcomeEmailEmployeeTemplate.html
@@ -145,7 +145,7 @@
 																																		Store</a></strong>
 																																or
 																																<strong><a
-																																		href="https://play.google.com/store/apps/details?id=com.wecareapp"
+																																		href="https://play.google.com/store/apps/details?id=com.revstarapp"
 																																		rel="noopener"
 																																		style="text-decoration: none; color: #457afb;"
 																																		target="_blank">Play
